contour/lab7-contour-httproute/app.yaml
---
# === APP V1 ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-v1
  template:
    metadata:
      labels:
        app: demo-v1
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        args: ["--name=I am Version 1!"] # This changes the output so we can identify it
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1-svc
spec:
  selector:
    app: demo-v1
  ports:
  - port: 80
    targetPort: 80

---
# === APP V2 ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-v2
  template:
    metadata:
      labels:
        app: demo-v2
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        args: ["--name=I am Version 2!"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-v2-svc
spec:
  selector:
    app: demo-v2
  ports:
  - port: 80
    targetPort: 80
